--- a/src/os/desktop.html
+++ b/src/os/desktop.html
@@ -51,7 +51,10 @@
         <button class="apps" ondblclick="javascript:window.open('desktop-notepad.html', '_self')">Notepad</button>
     </div>
     <div>
-        <button class="apps" ondblclick="javascript:alert('Coming soon!')">Settings</button>
+        <button class="apps" ondblclick="javascript:window.open('desktop-settings.html', '_self')">Settings</button>
+    </div>
+    <div>
+        <div><div><div><div></div></div></div></div>
     </div>
     <div><button class="appsspacer"></button></div>
     <div><button class="appsspacer"></button></div>
