--- a/src/os/settings-about-getoobe/about2.html
+++ b/src/os/settings-about-getoobe/about2.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <link rel="stylesheet" href="../settings-wifi-getoobe/oobe.css">
-    <div class="whitebox"><button class="xbutton" onclick="javascript:window.open('../desktop-settings.html', '_self')">X</button>
+    <div class="whitebox"><button class="xbutton" onclick="javascript:window.open('../desktop-quickmenu.html', '_self')">X</button>
     <hr>
 <h1>About OwnerOS</h1>
 <p>Version : 3.0.0</p></div>
