--- a/src/os/desktop-quickmenu.html
+++ b/src/os/desktop-quickmenu.html
@@ -25,6 +25,7 @@
             background-color: white;
         }
         .appsspacer {
+            width: 100px;
             height: 100px;
             border-color: transparent;
             border: transparent;
